<resources>
    <string name="app_name">LikeDealCare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Mobile">Mobile No.</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password ?</string>
    <string name="Signin">Sign In</string>
    <string name="or">Or</string>
    <string name="newuser">New User | Sign Up</string>
    <string name="alreadyhaveaccount">Already have an account !</string>
    <string name="otp">Otp</string>
    <string name="sendotp">Send Otp</string>
    <string name="email">Email Id</string>
    <string name="name">Name</string>
    <string name="fullname">Full name*</string>
    <string name="createpassword">Password( 7 or more characters )</string>
    <string name="place">Place</string>
    <string name="signup">Sign Up</string>
    <string name="dontworry">Don\'t worry we just need your registered email address and it\'s done!</string>
    <string name="resetpass">Reset Password</string>
    <string name="checkemail">Check your Inbox after clicking the button above.</string>
    <string name="goback"><![CDATA[<< Go Back]]></string>
    <string name="Recovery">Recovery email sent Successfully!  Check your Inbox.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="my_card">My Card</string>
    <string name="my_account">My Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="faqs">FAQs</string>
    <string name="Sign_out">Sign Out</string>
    <string name="verified">Verified</string>
    <string name="ratings">Ratings</string>
    <string name="timer">Timing</string>
    <string name="location">Location</string>
    <string name="call">Call now</string>
    <string name="feature_name">Feature Name</string>
    <string name="feature_value">Feature Value</string>
    <string name="search">Search</string>
    <string name="item_description">Description</string>
    <string name="item_specification">Specification</string>
    <string name="loading">Loading...</string>
    <string name="avail_now">AVAIL NOW</string>
    <string name="done">Done</string>
    <string name="contact">Contact</string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="go_home">Go Home</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="you_saved">You Saved</string>
    <string name="item_not_found">Item Not Found</string>
    <string name="_0">0</string>

    <string name="retry">Retry</string>
    <string name="remove">remove</string>
    <string name="book_appointments_from_home">Book appointments from home</string>
    <string name="find_doctor_by_speciality">Find Doctor by Speciality</string>
    <string name="get_your_health_card">GET YOUR HEALTH CARD</string>
    <string name="select_a_date_amp_time"><![CDATA[Select a date & time]]></string>
    <string name="morning">MORNING</string>
    <string name="afternoon">AFTERNOON</string>
    <string name="evening">EVENING</string>
    <string name="view_t_c"><![CDATA[view T & C]]><br /></string>
    <string name="rs_20">- Rs.20/-</string>
    <string name="savemore">Save your Valuable Money with exclusive membership</string>
    <string name="membership">membership</string>
    <string name="subscriptioncharge">₹ 199 /- </string>
    <string name="addtocart">Add to cart</string>
    <string name="secondsubscription">₹ 349 /- </string>
    <string name="upgrade_now_349">UPGRADE NOW ( ₹412 )</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="kar">₹ </string>


    <string name="banking_details">Banking Details</string>
    <string name="use_upi">For Bank Account</string>
    <string name="upi_no">UPI No.</string>
    <string name="name_in_upi_id">Name in UPI Id</string>
    <string name="user_s_name_which_shows_in_the_upi_id">User\'s name which shows in the UPI id</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="enter_banks_ifsc_code">Enter Banks IFSC code</string>
    <string name="account_no">Account No.</string>
    <string name="account_holder_s_name">Account Holder\'s Name</string>
    <string name="enter_holder_s_name">Enter holder\'s name</string>
    <string name="submit">Submit</string>
    <string name="users_e_mail">Users E-mail</string>
    <string name="confirm_account_no">Confirm account No.*</string>
    <string name="confirm_upi_no">Confirm UPI No.*</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>


</resources>