<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reset_Password">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/reward_gradient_background">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="199dp"

            android:contentDescription="@string/app_name"
            android:src="@drawable/unnamed" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/imageView"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:text="@string/dontworry"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/textView10"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="no"
            android:background="@drawable/edittextbackground"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="300dp"
            android:layout_height="36dp"
            android:layout_below="@id/editText"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:background="@color/colorPrimaryDark"
            android:enabled="false"
            android:text="@string/resetpass"
            android:textColor="#FFFFFF" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_btn"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/goback"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ok_button"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:src="@drawable/red_mail"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Recovery"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#16A116"
                android:visibility="gone" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:indeterminate="true"
            android:visibility="gone" />

    </RelativeLayout>



</FrameLayout>